Re pushing AUth functionality changes